locking some files

--- a/src/content/docs/guides/labTimeline.mdx
+++ b/src/content/docs/guides/labTimeline.mdx
@@ -48,7 +48,7 @@ import {
     <p><strong>Objective:</strong> Implement a real-time audio spectrum analyzer using FFT on sampled audio.</p>
     <p><strong>Highlights:</strong> ADC + DMA, circular buffers, 256-point FFT, dB conversion,
     and performance measurement.</p>
-  <LinkButton href="/labs/lab2/" target="_blank">View Lab 2 →</LinkButton>
+  {/* <LinkButton href="/labs/lab2/" target="_blank">View Lab 2 →</LinkButton> */}
   </Card>
 
   <Card title="Lab 3 – Migration to FreeRTOS" icon="document">
@@ -56,7 +56,7 @@ import {
     <p><strong>Objective:</strong> Migrate your application to FreeRTOS and explore multitasking concepts.</p>
     <p><strong>Highlights:</strong> Task creation, semaphores, message queues, priority tuning,
     and runtime profiling.</p>
-  <LinkButton href="/labs/lab3/" target="_blank">View Lab 3 →</LinkButton>
+  {/*<LinkButton href="/labs/lab3/" target="_blank">View Lab 3 →</LinkButton> */}
   </Card>
 
   <Card title="Lab 4 – RTOS Snake Game" icon="rocket">
@@ -64,7 +64,7 @@ import {
     <small>Due to Thanksgiving break, there is no rush on Nov 25.</small>
     <p><strong>Objective:</strong> Create an interactive Snake game using FreeRTOS multitasking.</p>
     <p><strong>Highlights:</strong> Input handling, game logic, software timers, LCD mutex, and sound feedback.</p>
-  <LinkButton href="/labs/lab4/" target="_blank">View Lab 4 →</LinkButton>
+  {/* <LinkButton href="/labs/lab4/" target="_blank">View Lab 4 →</LinkButton> */}
   </Card>
 
   <Card title="Lab 5 – Final System Integration" icon="laptop">
@@ -72,7 +72,7 @@ import {
     <p><strong>Objective:</strong> Integrate all previous modules into a single multitasking system.</p>
     <p><strong>Highlights:</strong> FreeRTOS task coordination, inter-task communication, performance monitor,
     and adaptive Snake gameplay.</p>
-  <LinkButton href="/labs/lab5/" target="_blank">View Lab 5 →</LinkButton>
+  {/* <LinkButton href="/labs/lab5/" target="_blank">View Lab 5 →</LinkButton> */}
   </Card>
 
 </CardGrid>
