--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -44,27 +44,34 @@ import freertos from '../../assets/freertos.png';
     title="Lab 1 – Sensor Hub"
     description="Interface with multiple sensors using I2C, ADC, and PWM while building a real-time dashboard."
     href="/labs/lab1/"
-  />
+  />  
+  {false && (
   <LinkCard
     title="Lab 2 – Spectrum Analyzer"
     description="Implement a real-time FFT audio analyzer and visualize frequency bands on the LCD."
     href="/labs/lab2/"
-  />
+    class="opacity-50 pointer-events-none cursor-not-allowed"
+  /> )}
+    {false && (
+
   <LinkCard
     title="Lab 3 – RTOS Integration"
     description="Migrate to FreeRTOS, manage concurrent tasks, and synchronize data across threads."
     href="/labs/lab3/"
-  />
+  /> )}
+    {false && (
   <LinkCard
     title="Lab 4 – RTOS Snake Game"
     description="Create a multitasking Snake game with FreeRTOS timers, mutexes, and LCD rendering."
     href="/labs/lab4/"
-  />
+  />)}
+    {false && (
   <LinkCard
     title="Lab 5 – Final System Integration"
     description="Combine all labs into a unified Embedded Arcade system running under FreeRTOS."
     href="/labs/lab5/"
   />
+  )}
 </CardGrid>
 
 <Aside type="tip" title="What is an RTOS?">
